added notebook comments

--- a/CATs_L96_RMSE_plot.ipynb
+++ b/CATs_L96_RMSE_plot.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "00fd8ad9",
+   "metadata": {},
+   "source": [
+    "## RMSE vs Lead Time Plot (Figure 3 in the manuscript)\n",
+    "\n",
+    "This notebook computes RMSE as a function of the lead time for different flavours of CATs. The plotting is done by reading different netcdf files which are obtained by various python scripts in the repository.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "5c0b0bfc-2427-4825-836c-972504460a31",
@@ -277,11 +287,25 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9fd686a8",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "0f570dd9",
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mstring\u001b[39;00m \n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Define the figure axes\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m fig \u001b[38;5;241m=\u001b[39m \u001b[43mplt\u001b[49m\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m[\u001b[38;5;241m15\u001b[39m,\u001b[38;5;241m15\u001b[39m])\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# define the grid \u001b[39;00m\n\u001b[1;32m      7\u001b[0m grid_ \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39mGridSpec(\u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m20\u001b[39m, wspace\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.15\u001b[39m, hspace\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.15\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'plt' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# %matplotlib inline\n",
+    "%matplotlib inline\n",
     "import string \n",
     "# Define the figure axes\n",
     "fig = plt.figure(figsize=[15,15])\n",
@@ -290,7 +314,7 @@
     "grid_ = plt.GridSpec(2, 20, wspace=0.15, hspace=0.15)\n",
     "\n",
     "#--------------------------------------------\n",
-    "##### First panel of bootstrapped RMSE ######\n",
+    "# First panel of bootstrapped RMSE ######\n",
     "#--------------------------------------------\n",
     "ax1 = fig.add_subplot(grid_[0,2:18])\n",
     "h0 = confidence_interval(tau,rmse_mperror.T, ax=ax1, color='k', \n",
