--- a/L96_chaos_study.ipynb
+++ b/L96_chaos_study.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e3b61871",
+   "metadata": {},
+   "source": [
+    "### Lorenz 96 chaos study\n",
+    "\n",
+    "This notebook studies the dynamical behaviour of Lorenz'96 model for different levels of the forcing. This study is used to choose forcing for the imperfect model which results in a periodic orbit than a chaotic attractor."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "d8422d7a",
